@@ -1,4 +1,4 @@
- /* config.h for snapwm.c [ 0.5.4 ]
+ /* config.h for snapwm.c [ 0.5.5 ]
  *
  *  Started from catwm 31/12/10
  *  Permission is hereby granted, free of charge, to any person obtaining a
